--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "fintech-json-api",
   "version": "1.0.0",
   "scripts": {
-    "start": "json-server --watch db.json --port $PORT"
-  },
+  "start": "json-server --watch db.json --host 0.0.0.0 --port $PORT"
+},
   "dependencies": {
     "json-server": "^0.17.0"
   }
